cli/tests/error_029_data_error_format_rust.ts.out
[WILDCARD]error: Uncaught (in promise) Error: bad
throw new Error("bad");
      ^
    at data:application/javascript;base64,dGhyb...iKTs=:1:7
